{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player3D",
            "id": "eaa3574a-9512-4cf5-a3a2-378c117d6816",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "1a471bde-d9c7-4000-a3f1-a887119b0ffd",
                    "expectedControlType": "Button",
                    "processors": "NormalizeVector2",
                    "interactions": "Hold"
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c4cab8d7-b457-42fb-b66e-3a68b6f5ad7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "687abf6e-0c18-4ed8-8446-79ba44106a0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "0dd146c3-a4f7-40a8-98b9-a9f56e619580",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "af14340b-3723-4a9e-948c-18d28af1ad2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseLook",
                    "type": "PassThrough",
                    "id": "330cb91c-9af6-4f6d-816e-2bfd77976bcb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f941fc0d-a7b9-415e-8281-025d55ca9492",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(pressPoint=0.2)",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98dd15aa-a1a9-41b0-bd29-fa9b1fd6631e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97632f91-3f96-4412-b2ac-43625a156e74",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e35a2074-78e3-4c49-96ac-275b64a2732b",
                    "path": "<Keyboard>/shift",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Move",
                    "id": "ee891ca9-39f4-4dee-8133-6bed967865e9",
                    "path": "2DVector",
                    "interactions": "Hold",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9ed8202a-7641-489d-884c-4a3481bdb062",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "451fc6ed-b492-4673-8cfa-02c46ebb2e3f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "571557e7-bb45-429c-9e7f-88c2bfa4453e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a43e6143-da1e-4933-b9dc-a1e40cf5564d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ad599d63-5f86-4699-b398-adc9921b0681",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2D",
            "id": "021d4ec3-5d24-4fbc-afac-fc81621f88b6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "de54283c-085d-4df2-8159-39dd7b61d5fe",
                    "expectedControlType": "Button",
                    "processors": "NormalizeVector2",
                    "interactions": "Hold"
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d4985ece-3720-42ce-8eb0-954676fbfcfd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "60685d19-f5f3-48f2-9615-9e4db3091800",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "9499b114-1968-4bd3-baf6-ef77a8802e95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "0bd6d6b2-941f-4287-b501-2f8fcb8c59c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b782e3e1-f4ef-4460-a5db-499372b6d9af",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0220a6f4-86f9-4a72-8ed5-9a2da5e6144f",
                    "path": "<Keyboard>/c",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bfb404b-1147-428b-86f1-7d5c0b9df767",
                    "path": "<Keyboard>/v",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3accc7a-54f9-485f-8c08-77259688148a",
                    "path": "<Keyboard>/shift",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Move",
                    "id": "1b0ec336-bd27-455c-93c5-c26377c69afe",
                    "path": "2DVector",
                    "interactions": "Hold",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f4f0edb8-6fde-425a-b1f2-d5855e4edb93",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6733461f-0d96-48d4-acf5-11b8d31f14ce",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3237e56e-f79b-4587-acf4-2d1d35e8971a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4e736613-8199-480c-a375-76bb81f4d2aa",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Developer",
            "id": "f58aab1f-6824-47f3-b507-5d2b76eba604",
            "actions": [
                {
                    "name": "Toggle Console",
                    "type": "Button",
                    "id": "54401d6c-f188-4049-bbe2-fe564e5a5026",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "87f866ff-2174-4661-853a-4bd65b83c1c5",
                    "path": "<Keyboard>/slash",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Toggle Console",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}